--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">HSWinRate</string>
     <string name="action_settings">Settings</string>
-    <string name="notification_title">Game Result</string>
-    <string name="notification_message">Select your result, then your opponent\'s class</string>
-    <string name="ticker_text">ticker text</string>
+    <string name="notification_title">HS Win Rate</string>
+    <string name="notification_message">Expand and select your game result</string>
 </resources>
